Overflow solved

--- a/input.css
+++ b/input.css
@@ -9,6 +9,11 @@
   font-family: 'Poppins', sans-serif;
   list-style: none;
   text-decoration: none;
+  max-width: 100%;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .active-link {
